jena-shex/src/test/files/spec/negativeSyntax/PN_LOCAL-PERCENT-end.shex
# PN_LOCAL with bad PERCENT escape in last character
# source: turtle-syntax-bad-ln-escape.ttl
PREFIX ex: <http://a.example/>

ex:IssueShape {
   ex:p%1 .
}
